--- a/css.css
+++ b/css.css
@@ -30,7 +30,7 @@ p {
     color: #5c5c5c;
 }
 
-ul {
+ol {
     list-style-type: none;
     padding: 0;
 }
@@ -82,3 +82,26 @@ button {
     font-size: 14px;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 0px 0px;
 }
+
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+th {
+    background-color: #4CAF50;
+    color: white;
+}
+
+tr:nth-child(even) {
+    background-color: #e1d5e6;
+}
+
